[package]
name = "ndjson-spatial"
version = "0.1.0"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
geo = "^0.12"
geo-types = "^0.4"
geojson = { git = "https://github.com/georust/geojson" }
geojson-rstar = { git = "https://github.com/boydjohnson/geojson-rstar", branch = "impl-for-each" }
rstar = "^0.3"
serde_json = "^1.0"
geo-booleanop = { git = "https://github.com/boydjohnson/rust-geo-booleanop" }
