[package]
name = "ndjson-common"
version = "0.1.0"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
edition = "2018"

[dependencies]
encode_unicode = "^0.3"
geo = "^0.14"
geos = { version = "7.0.0", features = ["json"] }
geojson = { version = "^0.19", features = ["geo-types"] }
geo-types = "^0.6"
geojson-rstar = { git = "https://github.com/boydjohnson/geojson-rstar" }
nom = "4.2"
serde_json = "1.0"
yajlish = { version = "^0.1", features=["ndjson"] }
