[package]
name = "ndjson-common"
version = "0.1.0"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
edition = "2018"

[dependencies]
geo = { version = "^0.14", optional = true }
geos = { version = "7.0.0", features = ["json"], optional = true }
geojson = { version = "^0.19", features = ["geo-types"], optional = true }
geo-types = { version = "^0.6", optional = true }
geojson-rstar = { git = "https://github.com/boydjohnson/geojson-rstar", optional = true }
nom = "4.2"
serde_json = "1.0"
yajlish = { version = "^0.2", features = ["ndjson"] }

[features]
spatial = ["geos", "geojson-rstar", "geo-types", "geojson", "geo"]
