[package]
name = "ndjson-spatial"
version = "0.1.0"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
edition = "2018"

[[bin]]
path = "src/ndjson_spatial_main.rs"
name = "ndjson-spatial"

[dependencies]
clap = "^2.33"
gdal = "^0.7"
geo = "^0.14"
geos = { version = "7.0.0", features = ["json", "geo"] }
geo-types = "^0.6"
geojson = { version = "^0.19", features = ["geo-types"] }
geojson-rstar = { git = "https://github.com/boydjohnson/geojson-rstar" }
ndjson-common = { path = "../ndjson-common", features = ["spatial"] }
rstar = "^0.8"
serde_json = "^1.0"
