[package]
name = "ndjson"
version = "0.1.0"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Command line tool for creating, filtering, processing ndjson"


[dependencies]
clap = "2.33"
csv = "1.1"
geojson = "^0.19"
itertools = "^0.10"
ndjson-common = { path = "../ndjson-common" }
ordered-float = "^2.0"
serde_json = "1.0"
